new_tests/semantics/type/good/000_LOCAL_1.cm

def a:Int = 5
def b:Char = 'c'
def c:Bool = True
def d:Real = 3.14
def e:String = 'hi there'
