new_tests/semantics/type/bad/026_BE11.cm

def a:String = 'hey'
def b:String = 'hi'
a | b
